--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -109,13 +109,14 @@ h1 {
   gap: 4rem;
   justify-content: center;
   align-items: center;
+  margin-bottom: 4rem;
   
 }
 .test {
-  background-color: #242424;
+  background-color: #121212;
 
   min-height: 30rem;
-  box-shadow: 0px 8px 10px rgba(19, 19, 19, 0.993);
+  box-shadow: 0px 8px 10px rgba(84, 84, 84, 0.993);
   border-radius: 0 0 1rem 1rem;
   display: flex;
   flex-direction: column;
@@ -124,15 +125,16 @@ h1 {
 .card__image{
   width: 100%;
   min-height: 20rem;
+  background: white;
   max-height: 2.57rem;
-  border-radius: 0 0 2rem 2rem;
-  padding: 1rem;
+
+
   object-fit: cover;
 
 }
 .icons__container{
   padding: 0 2rem;
-  margin: 0;
+  margin: 1rem 0;
   display: flex;
   justify-content: space-around;
 }
@@ -165,15 +167,20 @@ p{
   font-size: 2rem;
 
 }
+
+
+.btn__container{
+  margin-top: 1rem;
+}
 .btn{
   min-width:25rem;
-  padding: 1rem;
+  padding: .8rem;
   margin: 2rem auto;
   outline: none;
   text-transform: uppercase;
   border: none;
   cursor: pointer;
-  border-radius: 1rem;
+  border-radius: .4rem;
   font-family: "Poppins", sans-serif;
   color: #000;
   font-weight: 700;
@@ -200,4 +207,19 @@ color: rgb(105, 0, 218);
   align-items: center;
   border: none;
   border-radius: .2rem;
+}
+
+.pagem{
+  margin: 0;
+  padding: 0;
+}
+
+.pagination{
+  margin: 0;
+  padding: 0;
+  text-align:start;
+
+ 
+  color: white;
+  font-size: 5rem;
 }
